# BBoxCubeGenerator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: BBoxCubeGenerator.h
